auto-test/tests/chapter_15/invalid_types/compare_pointer_to_zero.c
int main(void)
{
    int *x = 0;
    
    
    
    
    
    return x > 0;
}